# poker_game

./: .dockerignore  .gitignore  AGENTS.md  README.md  build_android_apk_docker.sh  run_poker_game.sh
poker_game/: CMakeLists.txt
poker_game/Classes/: AppDelegate.cpp  AppDelegate.h  CardTypes.h  GameScene.cpp  GameScene.h  GameSceneCustom.cpp  GameSceneGameplay.cpp  GameSceneLevel.cpp  GameSceneStartOverlay.cpp  GameSceneUI.cpp  LinuxCompat.cpp  PokerCard.cpp  PokerCard.h  TODO.md
poker_game/Classes/config/: GlobalConfig.cpp  GlobalConfig.h  JsonConfig.cpp  JsonConfig.h
poker_game/Classes/controller/: GameController.cpp  GameController.h  HighlightService.cpp  HighlightService.h  LayoutFlowController.cpp  LayoutFlowController.h  MatchEngine.cpp  MatchEngine.h  UndoAction.h  UndoManager.cpp  UndoManager.h
poker_game/Classes/editor/: CustomLayoutEditor.cpp  CustomLayoutEditor.h
poker_game/Classes/history/: OperationHistory.cpp  OperationHistory.h
poker_game/Classes/logging/: GameLogger.cpp  GameLogger.h
poker_game/Classes/model/: CardDeck.cpp  CardDeck.h  CardSlot.cpp  CardSlot.h  CustomLayoutDraft.cpp  CustomLayoutDraft.h  GameState.cpp  GameState.h  LayoutConfig.cpp  LayoutConfig.h  RewardGrant.h
poker_game/Classes/presenter/: GameplayPresenter.cpp  GameplayPresenter.h  GameplayView.cpp  GameplayView.h  IGameplayView.h  SceneChromePresenter.cpp  SceneChromePresenter.h  SceneUIManager.cpp  SceneUIManager.h
poker_game/Classes/view/: CardSlotView.cpp  CardSlotView.h  InputDetector.cpp  InputDetector.h  MainAreaView.cpp  MainAreaView.h  PokerCardView.cpp  PokerCardView.h  TopAreaView.cpp  TopAreaView.h  UILabelHelper.h
poker_game/Resources/config/: game_config.json  strings.json  theme.json
poker_game/Resources/config/layouts/: diamond.json  fan.json  spiral.json  tripeaks.json
poker_game/docker/android/: Dockerfile  build-apk.sh  docker-compose.yml
poker_game/docs/: README.md  architecture.md  building.md  config.md  controller.md  gameplay.md  layouts.md  model.md  setup.md  view.md
poker_game/proj.android/: settings.gradle
poker_game/proj.android/app/: AndroidManifest.xml  build.gradle
poker_game/proj.android/app/res/values/: strings.xml
poker_game/proj.ios_mac/ios/: Info.plist
poker_game/proj.ios_mac/mac/: Info.plist
poker_game/proj.ios_mac/poker_game.xcodeproj/: project.pbxproj
poker_game/proj.win32/: poker_game.sln
